crates/lowering/tests/snapshots/concrete__lower_binder_array.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderVariable,
                range: 23..24,
            },
        }: Variable {
            name: Some(
                "a",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderVariable,
                range: 25..27,
            },
        }: Variable {
            name: Some(
                "b",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderVariable,
                range: 28..30,
            },
        }: Variable {
            name: Some(
                "c",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderArray,
                range: 21..31,
            },
        }: Array {
            binders: [
                Id<syntax::cst::Binder>(0),
                Id<syntax::cst::Binder>(1),
                Id<syntax::cst::Binder>(2),
            ],
        },
    },
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 33..35,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "a",
            ),
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
