crates/lowering/tests/snapshots/concrete__lower_binder_constructor.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderVariable,
                range: 27..29,
            },
        }: Variable {
            name: Some(
                "a",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderVariable,
                range: 29..31,
            },
        }: Variable {
            name: Some(
                "b",
            ),
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderConstructor,
                range: 23..31,
            },
        }: Constructor {
            qualifier: None,
            name: Some(
                "Cons",
            ),
            arguments: [
                Id<syntax::cst::Binder>(0),
                Id<syntax::cst::Binder>(1),
            ],
        },
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderParenthesized,
                range: 21..32,
            },
        }: Parenthesized {
            binder: Some(
                Id<syntax::cst::Binder>(2),
            ),
        },
    },
    expressions: {},
    let_bindings: {},
    let_bindings_grouped: [],
}
