crates/lowering/tests/snapshots/concrete__lower_binder_integer.snap
---
source: crates/lowering/tests/concrete.rs
expression: "&lower.source_map"
snapshot_kind: text
---
SourceMap {
    types: {},
    binders: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderInteger,
                range: 21..23,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderInteger,
                range: 23..25,
            },
        }: Integer,
        AstPtr {
            raw: SyntaxNodePtr {
                kind: BinderInteger,
                range: 25..27,
            },
        }: Integer,
    },
    expressions: {
        AstPtr {
            raw: SyntaxNodePtr {
                kind: ExpressionVariable,
                range: 29..31,
            },
        }: Variable {
            qualifier: None,
            name: Some(
                "a",
            ),
        },
    },
    let_bindings: {},
    let_bindings_grouped: [],
    do_statements: {},
}
